--- a/1 - html/my-webpage.html
+++ b/1 - html/my-webpage.html
@@ -22,5 +22,25 @@
     <p>The tag for <sub>subscript text</sub> is 'sub'</p>
     <p>Some <del>deleted text</del> with 'del' tag</p>
     <hr />
+    <ul>
+      <li>Rob</li>
+      <li>Kirsten</li>
+      <li>Tommy</li>
+      <li>Ralph</li>
+    </ul>
+    <hr />
+    <ol>
+      <!-- attribute start="5" , reversed, type="" a letters, A cap letters, i romans, I cap romans-->
+      <li>Primer</li>
+      <li>Segon</li>
+      <li>Tercer</li>
+      <li>Quart</li>
+    </ol>
+    <hr />
+    <img src="user.jpg" />
+    <p>New user</p>
+    <br />
+    <img src="https://duckduckgo.com/assets/logo_homepage.alt.v108.svg" width="200" height="200" />
+    <p>New duck</p>
   </body>
 </html>
