--- a/1 - html/my-webpage.html
+++ b/1 - html/my-webpage.html
@@ -42,5 +42,22 @@
     <br />
     <img src="https://duckduckgo.com/assets/logo_homepage.alt.v108.svg" width="200" height="200" />
     <p>New duck</p>
+    <hr />
+    <form>
+      <p>Username: <input type="text" placeholder="user name" /></p>
+      <p>Active: <input type="checkbox" /></p>
+      <p>Under 18: <input type="radio" name="age" value="u18" /></p>
+      <p>Over 18: <input type="radio" name="age" value="o18" /></p>
+    </form>
+    <p>
+      Favourite food:
+      <select>
+        <option>Meat</option>
+        <option selected>Fish</option>
+        <option>Vegetables</option>
+      </select>
+    </p>
+    <p><input type="submit" value="Click me" /></p>
+    <hr />
   </body>
 </html>
