--- a/1 - html/my-webpage.html
+++ b/1 - html/my-webpage.html
@@ -59,5 +59,31 @@
     </p>
     <p><input type="submit" value="Click me" /></p>
     <hr />
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Color</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Rob</td>
+          <td>Green</td>
+        </tr>
+        <tr>
+          <td>Kirsten</td>
+          <td>Orange</td>
+        </tr>
+        <tr>
+          <td>Tommy</td>
+          <td>Pink</td>
+        </tr>
+        <tr>
+          <td>Ralph</td>
+          <td>Blue</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
