--- a/1 - html/my-webpage.html
+++ b/1 - html/my-webpage.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    <h1>This is a big h1 header</h1>
+    <h1 id="top">This is a big h1 header</h1>
     <h2>This is quite a big h2 header</h2>
     <h3>This is quite a big h3 header</h3>
     <h4>This is an h4 tag</h4>
@@ -85,5 +85,35 @@
         </tr>
       </tbody>
     </table>
+    <hr />
+    <!--Absolute links-->
+    <p id="1st-link"><a href="https://www.google.com">Click here to go to Google</a></p>
+    <p>
+      <a href="https://www.wikipedia.org"><img src="Wikipedia-logo-v2-es.svg.png" /></a>
+    </p>
+    <!--Relative link. Link within your website-->
+    <p><a href="helloworld.html">Hello world!</a></p>
+    <!--Absolute links-->
+    <p>
+      <a href="https://www.wikipedia.org"><img src="Wikipedia-logo-v2-es.svg.png" /></a>
+    </p>
+    <p>
+      <a href="https://www.wikipedia.org"><img src="Wikipedia-logo-v2-es.svg.png" /></a>
+    </p>
+    <p>
+      <a href="https://www.wikipedia.org"><img src="Wikipedia-logo-v2-es.svg.png" /></a>
+    </p>
+    <p>
+      <a href="https://www.wikipedia.org"><img src="Wikipedia-logo-v2-es.svg.png" /></a>
+    </p>
+    <p>
+      <a href="https://www.wikipedia.org"><img src="Wikipedia-logo-v2-es.svg.png" /></a>
+    </p>
+    <p>
+      <a href="https://www.wikipedia.org"><img src="Wikipedia-logo-v2-es.svg.png" /></a>
+    </p>
+    <!--Anchor links. Links within your page-->
+    <p><a href="#1st-link">Back to first link</a></p>
+    <p><a href="#top">Back to top</a></p>
   </body>
 </html>
