--- a/1 - html/my-webpage.html
+++ b/1 - html/my-webpage.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
+    <!--Headers-->
     <h1 id="top">This is a big h1 header</h1>
     <h2>This is quite a big h2 header</h2>
     <h3>This is quite a big h3 header</h3>
@@ -16,12 +17,14 @@
     <p>We can also get <strong>bold characters</strong> with the tag 'strong'</p>
     <p>Here we are using<br />a line break<br />instead of a new paragraph</p>
     <hr />
+    <!--Paragraphs-->
     <p>We can get <i>italic words</i> with 'i' tag or 'em' tag, <em>like this</em></p>
     <p>To get <u>underlined text</u> we use the tag 'u' or 'ins'</p>
     <p>The tag for <sup>superscript text</sup> is 'sup'</p>
     <p>The tag for <sub>subscript text</sub> is 'sub'</p>
     <p>Some <del>deleted text</del> with 'del' tag</p>
     <hr />
+    <!--Lists-->
     <ul>
       <li>Rob</li>
       <li>Kirsten</li>
@@ -37,12 +40,14 @@
       <li>Quart</li>
     </ol>
     <hr />
+    <!--Images-->
     <img src="user.jpg" />
     <p>New user</p>
     <br />
     <img src="https://duckduckgo.com/assets/logo_homepage.alt.v108.svg" width="200" height="200" />
     <p>New duck</p>
     <hr />
+    <!--Forms-->
     <form>
       <p>Username: <input type="text" placeholder="user name" /></p>
       <p>Active: <input type="checkbox" /></p>
@@ -86,12 +91,12 @@
       </tbody>
     </table>
     <hr />
-    <!--Absolute links-->
+    <!--Absolute links. Links to external sites-->
     <p id="1st-link"><a href="https://www.google.com">Click here to go to Google</a></p>
     <p>
       <a href="https://www.wikipedia.org"><img src="Wikipedia-logo-v2-es.svg.png" /></a>
     </p>
-    <!--Relative link. Link within your website-->
+    <!--Relative links. Link within your website-->
     <p><a href="helloworld.html">Hello world!</a></p>
     <!--Absolute links-->
     <p>
@@ -115,5 +120,8 @@
     <!--Anchor links. Links within your page-->
     <p><a href="#1st-link">Back to first link</a></p>
     <p><a href="#top">Back to top</a></p>
+    <!--Entities. How to display reserved characters in HTML-->
+    <!--Example: <a href="helloworld.html">-->
+    <p>&lt;a href="helloworld.html"&gt;</p>
   </body>
 </html>
