--- a/1 - html/my-webpage.html
+++ b/1 - html/my-webpage.html
@@ -123,5 +123,13 @@
     <!--Entities. How to display reserved characters in HTML-->
     <!--Example: <a href="helloworld.html">-->
     <p>&lt;a href="helloworld.html"&gt;</p>
+    <hr />
+    <!--Video & audio-->
+    <video width="320" height="240" controls>
+      <source src="SampleVideo_1280x720_1mb.mp4" type="video/mp4" />
+    </video>
+    <audio controls>
+      <source src="SampleAudio_0.4mb.mp3" type="audio/mpeg" />
+    </audio>
   </body>
 </html>
