--- a/3 - css/webpage-with-style.html
+++ b/3 - css/webpage-with-style.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <p>First sentence</p>
-    <p>Second sentence</p>
+    <p style="color: blue; font-size: 200%">First sentence</p>
+    <h1 style="color: green; font-size: 150%">CSS is cool</h1>
   </body>
 </html>
