--- a/3 - css/webpage-with-style.html
+++ b/3 - css/webpage-with-style.html
@@ -5,9 +5,22 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style type="text/css">
+      p {
+        color: red;
+        font-size: 200%;
+      }
+      h1 {
+        color: pink;
+        font-size: 150%;
+      }
+    </style>
   </head>
   <body>
-    <p style="color: blue; font-size: 200%">First sentence</p>
-    <h1 style="color: green; font-size: 150%">CSS is cool</h1>
+    <!--<p style="color: blue; font-size: 200%">First sentence</p>
+    <h1 style="color: green; font-size: 150%">CSS is cool</h1> -->
+    <p>First sentence</p>
+    <p>I love internal CSS</p>
+    <h1>CSS is cool</h1>
   </body>
 </html>
