--- a/3 - css/webpage-with-style.html
+++ b/3 - css/webpage-with-style.html
@@ -6,21 +6,34 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type="text/css">
-      p {
+      /*       p {
         color: red;
         font-size: 200%;
       }
       h1 {
         color: pink;
         font-size: 150%;
+      } */
+      .red {
+        color: red;
+      }
+      .large {
+        font-size: 200%;
+      }
+      .underlined {
+        text-decoration: underline;
+      }
+      #green {
+        color: green;
       }
     </style>
   </head>
   <body>
     <!--<p style="color: blue; font-size: 200%">First sentence</p>
     <h1 style="color: green; font-size: 150%">CSS is cool</h1> -->
-    <p>First sentence</p>
-    <p>I love internal CSS</p>
-    <h1>CSS is cool</h1>
+    <p class="red large">First sentence</p>
+    <p class="large">I love internal CSS</p>
+    <p id="green">This is some more text. <span class="underlined">And this text is underlined</span></p>
+    <h1 class="red">CSS is cool</h1>
   </body>
 </html>
