--- a/3 - css/webpage-with-style.html
+++ b/3 - css/webpage-with-style.html
@@ -26,14 +26,26 @@
       #green {
         color: green;
       }
+      #first-section {
+        color: blue;
+        background-color: pink;
+        width: 50%;
+      }
+      #second-section {
+        background-color: yellow;
+      }
     </style>
   </head>
   <body>
     <!--<p style="color: blue; font-size: 200%">First sentence</p>
     <h1 style="color: green; font-size: 150%">CSS is cool</h1> -->
-    <p class="red large">First sentence</p>
-    <p class="large">I love internal CSS</p>
-    <p id="green">This is some more text. <span class="underlined">And this text is underlined</span></p>
-    <h1 class="red">CSS is cool</h1>
+    <div id="first-section">
+      <p>First sentence</p>
+      <p>I love internal CSS</p>
+    </div>
+    <div id="second-section">
+      <p id="green">This is some more text. <span class="underlined">And this text is underlined</span></p>
+      <h1 class="red">CSS is cool</h1>
+    </div>
   </body>
 </html>
