--- a/3 - css/webpage-with-style.html
+++ b/3 - css/webpage-with-style.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--htmlcolorcodes.com-->
+    <!--Google extension: colorzilla. Pick colors from any website-->
     <style type="text/css">
       /*       p {
         color: red;
@@ -28,11 +30,11 @@
       }
       #first-section {
         color: blue;
-        background-color: pink;
+        background-color: #ffa07a;
         width: 50%;
       }
       #second-section {
-        background-color: yellow;
+        background-color: #d6eaf8;
       }
     </style>
   </head>
