--- a/3 - css/webpage-with-style.html
+++ b/3 - css/webpage-with-style.html
@@ -18,12 +18,18 @@
       } */
       #square-red {
         background-color: red;
+        border: 10px black solid;
       }
       #square-green {
         background-color: green;
+        border: 15px;
+        border-style: ridge solid dotted dashed;
+        border-color: red magenta cadetblue gold;
       }
       #square-blue {
         background-color: blue;
+        /* Rounded rectangles. Can use pixels or percentages. A 50% border-radius is a circle*/
+        border-radius: 20px;
       }
       .square {
         width: 200px;
