--- a/3 - css/webpage-with-style.html
+++ b/3 - css/webpage-with-style.html
@@ -122,6 +122,19 @@
       .big {
         font-size: 250%;
       }
+      .textright {
+        text-align: right;
+      }
+      .textcenter {
+        text-align: center;
+      }
+      .textjustified {
+        text-align: justify;
+      }
+      .onediv {
+        width: 300px;
+        background-color: darkorange;
+      }
       #green {
         color: green;
       }
@@ -236,5 +249,14 @@
     <p><a href="" class="notunderlined">This is also a link, but it's not underlined</a></p>
     <p class="big">Very big text!</p>
     <hr />
+    <p class="textright">Text to the right of the page</p>
+    <p class="textcenter">Text in the middle of the page</p>
+    <div class="onediv">
+      <p class="textright">Text to the right of the div</p>
+      <p class="textcenter">Text in the middle of the div</p>
+      <p class="textjustified">
+        Text is justified in the div. You need more text to see the effect, otherwise you don't notice anything
+      </p>
+    </div>
   </body>
 </html>
