--- a/3 - css/webpage-with-style.html
+++ b/3 - css/webpage-with-style.html
@@ -166,6 +166,9 @@
       }
       a:hover {
         text-decoration: underline;
+        color: darkred;
+      }
+      a:visited {
         color: green;
       }
     </style>
@@ -258,5 +261,12 @@
         Text is justified in the div. You need more text to see the effect, otherwise you don't notice anything
       </p>
     </div>
+    <hr />
+    <p><a href="http://www.google.com" class="notunderlined">This is a link to Google</a></p>
+    <p>
+      <a href="http://www.google.com" class="notunderlined" target="_blank"
+        >This is a link to Google that opens in a new tab</a
+      >
+    </p>
   </body>
 </html>
