--- a/3 - css/webpage-with-style.html
+++ b/3 - css/webpage-with-style.html
@@ -177,6 +177,21 @@
       a:visited {
         color: red;
       }
+      input:focus {
+        background-color: blue;
+      }
+      p:first-child {
+        color: aquamarine;
+      }
+      tr:nth-child(2n-1) {
+        background-color: chartreuse;
+      }
+      p:not(.underlined) {
+        font-size: 125%;
+      }
+      p::first-letter {
+        font-size: 150%;
+      }
       div p {
         font-weight: bold;
       }
@@ -312,5 +327,37 @@
       <h3>Hello!</h3>
       <p>I'm a paragraph in another div</p>
     </div>
+    <hr />
+    <input />
+    <hr />
+    <table>
+      <thead>
+        <th>Name</th>
+        <th>Radius</th>
+        <th style="text-align: center">Average<br />Temperature</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Mars</td>
+          <td>3,396km</td>
+          <td>-46°c</td>
+        </tr>
+        <tr>
+          <td>Venus</td>
+          <td>6,052km</td>
+          <td>462°c</td>
+        </tr>
+        <tr>
+          <td>Mars</td>
+          <td>3,396km</td>
+          <td>-46°c</td>
+        </tr>
+        <tr>
+          <td>Venus</td>
+          <td>6,052km</td>
+          <td>462°c</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
