--- a/3 - css/webpage-with-style.html
+++ b/3 - css/webpage-with-style.html
@@ -150,6 +150,37 @@
         background-color: aliceblue;
         box-shadow: 6px 6px 10px;
       }
+      .box,
+      .box2,
+      .box3,
+      .box4,
+      .box5 {
+        width: 100px;
+        height: 100px;
+        background-color: red;
+        border-radius: 10px;
+        transition: 0.2s ease-in;
+        font-family: Arial, Helvetica, sans-serif;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 200%;
+      }
+      .box:hover {
+        transform: translate(10px, 10px);
+      }
+      .box2:hover {
+        transform: rotate(45deg);
+      }
+      .box3:hover {
+        transform: scale(0.8, 0.5);
+      }
+      .box4:hover {
+        transform: skew(5deg, 10deg);
+      }
+      .box5:hover {
+        transform: rotateX(180deg);
+      }
       #green {
         color: green;
       }
@@ -392,5 +423,15 @@
     <h2 class="shadow">This text will have a shadow</h2>
     <h2 class="glow">This text will glow with a shadow with no offset</h2>
     <div class="shadowbox"></div>
+    <hr />
+    <div class="box"></div>
+    <hr />
+    <div class="box2"></div>
+    <hr />
+    <div class="box3"></div>
+    <hr />
+    <div class="box4"></div>
+    <hr />
+    <div class="box5">Box</div>
   </body>
 </html>
