--- a/3 - css/webpage-with-style.html
+++ b/3 - css/webpage-with-style.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="normalize.css" />
     <style type="text/css">
       /*       p {
         color: red;
@@ -457,5 +458,10 @@
       <div class="flexbox-item">Item 6</div>
       <div class="flexbox-item">Item 7</div>
     </div>
+    <hr />
+    <form>
+      <p>Name: <input type="text" /></p>
+      <p><input type="submit" value="Submit" /></p>
+    </form>
   </body>
 </html>
