--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -4,17 +4,42 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="normalize.css" />
     <title>Rob's portfolio site</title>
     <style type="text/css">
+      /* Menu on top of the page*/
       .menu {
         width: 100%;
-        height: 40px;
+        height: 50px;
         position: fixed;
-        background-color: midnightblue;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #200e3d;
       }
       .whitelink {
+        font-family: Arial, Helvetica, sans-serif;
         text-decoration: none;
+        margin: 0 15px;
         color: white;
+      }
+      /* Info block */
+      h1,
+      h2 {
+        font-family: 'Arial black', sans-serif;
+      }
+      .infoblock {
+        background-color: #9727e7;
+      }
+      .hi-block {
+        padding: 100px 0 50px 0;
+      }
+      .roundimage {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 50%;
+        width: 40%;
       }
     </style>
   </head>
@@ -23,6 +48,12 @@
       <a class="whitelink" href="">ABOUT ME</a>
       <a class="whitelink" href="">PROJECTS</a>
       <a class="whitelink" href="">CONTACT ME</a>
+    </div>
+    <div class="infoblock">
+      <div class="hi-block">
+        <p><img class="roundimage" src="images/rob.jpeg" /></p>
+        <h2>Hi! I'm Rob! I teach people how to code and make websites.</h2>
+      </div>
     </div>
   </body>
 </html>
