--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="normalize.css" />
     <title>Rob's portfolio site</title>
     <style type="text/css">
+      h2,
+      h3 {
+        font-family: 'Arial black', sans-serif;
+      }
+      .textcenter {
+        text-align: center;
+      }
+      .info-block,
+      .projects-block {
+        background-color: #9727e7;
+      }
+      .block {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
       /* Menu on top of the page*/
       .menu {
         width: 100%;
@@ -24,21 +40,6 @@
         color: white;
       }
       /* Info block */
-      h2,
-      h3 {
-        font-family: 'Arial black', sans-serif;
-      }
-      .textcenter {
-        text-align: center;
-      }
-      .info-block {
-        background-color: #9727e7;
-      }
-      .block {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
       .hi-block {
         padding: 110px 0 0 0;
       }
@@ -73,6 +74,16 @@
       .about-text {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       }
+      /*Projects block*/
+      .projects-header {
+        color: white;
+      }
+      .projects-image {
+        float: left;
+        height: 400px;
+        padding: 20px;
+        border-radius: 30px 30px 0 0;
+      }
     </style>
   </head>
   <body>
@@ -101,6 +112,13 @@
               familiar with HTML5, CSS3, JavaScript, PHP7 and MySQL. Checkout some of the projects I've done below.
             </p>
           </div>
+        </div>
+      </div>
+      <div class="projects-block">
+        <h2 class="textcenter projects-header">Projects</h2>
+        <div class="projects-contents block">
+          <img class="projects-image" src="images/earth.jpeg" />
+          <img class="projects-image" src="images/bbcnews.png" />
         </div>
       </div>
     </div>
