--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -78,11 +78,14 @@
       .projects-header {
         color: white;
       }
-      .projects-image {
+      .image-container {
         float: left;
+      }
+      .projects-image {
+        /* float: left; */
+        padding: 10px;
         height: 400px;
-        padding: 20px;
-        border-radius: 30px 30px 0 0;
+        border-radius: 20px 20px 0 0;
       }
     </style>
   </head>
@@ -117,8 +120,8 @@
       <div class="projects-block">
         <h2 class="textcenter projects-header">Projects</h2>
         <div class="projects-contents block">
-          <img class="projects-image" src="images/earth.jpeg" />
-          <img class="projects-image" src="images/bbcnews.png" />
+          <div class="projects-image"><img class="projects-image" src="images/earth.jpeg" /></div>
+          <div class="projects-image"><img class="projects-image" src="images/bbcnews.png" /></div>
         </div>
       </div>
     </div>
