--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -23,6 +23,9 @@
         align-items: center;
         justify-content: center;
       }
+      .clear-float {
+        clear: both;
+      }
       /* Menu on top of the page*/
       .menu {
         width: 100%;
@@ -32,6 +35,7 @@
         justify-content: center;
         align-items: center;
         background-color: #200e3d;
+        z-index: 5;
       }
       .whitelink {
         font-family: Arial, Helvetica, sans-serif;
@@ -71,7 +75,8 @@
       .about-header {
         padding: 50px 0 20px 0;
       }
-      .about-text {
+      .about-text,
+      .projects-text {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       }
       /*Projects block*/
@@ -79,13 +84,46 @@
         color: white;
       }
       .image-container {
-        float: left;
+        display: flex;
+        flex-wrap: wrap;
       }
       .projects-image {
         /* float: left; */
         padding: 10px;
         height: 400px;
         border-radius: 20px 20px 0 0;
+        z-index: 0;
+      }
+      .projects-text {
+        font-size: 105%;
+      }
+      .earth-bbc-card {
+        background-color: white;
+        width: 340px;
+        height: 175px;
+        position: relative;
+        z-index: 1;
+        left: 10px;
+        top: -175px;
+        padding: 5px 30px;
+        text-align: center;
+      }
+      .projects-bottom {
+        position: relative;
+        background-color: #9727e7;
+        height: 150px;
+        width: auto;
+        z-index: 2;
+      }
+      .projects-button {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        border: none;
+        border-radius: 5px;
+        box-shadow: 0 0 0 5px lightskyblue;
+        color: blue;
+      }
+      .projects-button:hover {
+        cursor: pointer;
       }
     </style>
   </head>
@@ -120,9 +158,29 @@
       <div class="projects-block">
         <h2 class="textcenter projects-header">Projects</h2>
         <div class="projects-contents block">
-          <div class="projects-image"><img class="projects-image" src="images/earth.jpeg" /></div>
-          <div class="projects-image"><img class="projects-image" src="images/bbcnews.png" /></div>
+          <div class="projects-image">
+            <img class="projects-image" src="images/earth.jpeg" />
+            <div class="earth-bbc-card">
+              <h3>Earth facts</h3>
+              <p class="projects-text">A HTML project about some facts about the earth.</p>
+              <a href="https://google.com" target="_blank">
+                <input class="projects-button" type="button" value="View Project" />
+              </a>
+            </div>
+          </div>
+          <div class="projects-image">
+            <img class="projects-image" src="images/bbcnews.png" />
+            <div class="earth-bbc-card">
+              <h3>BBC News Clone</h3>
+              <p class="projects-text">This project is a clone of the BBC news website from the Web Dev 2.0 Course.</p>
+              <a href="https://yahoo.com" target="_blank">
+                <input class="projects-button" type="button" value="View Project" />
+              </a>
+            </div>
+          </div>
         </div>
+        <div class="projects-bottom"></div>
+        <!--         <div class="clear-float"></div> -->
       </div>
     </div>
   </body>
