--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -104,7 +104,7 @@
         position: relative;
         z-index: 1;
         left: 10px;
-        top: -175px;
+        top: -80px;
         padding: 5px 30px;
         text-align: center;
       }
@@ -124,6 +124,9 @@
       }
       .projects-button:hover {
         cursor: pointer;
+      }
+      .earth-bbc-card:hover {
+        top: -175px;
       }
     </style>
   </head>
