Projects block. Cards hover ok

--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -107,11 +107,12 @@
         top: -80px;
         padding: 5px 30px;
         text-align: center;
+        transition: 0.2s ease-in-out;
       }
       .projects-bottom {
         position: relative;
         background-color: #9727e7;
-        height: 150px;
+        height: 125px;
         width: auto;
         z-index: 2;
       }
@@ -127,6 +128,7 @@
       }
       .earth-bbc-card:hover {
         top: -175px;
+        transform: translateY();
       }
     </style>
   </head>
