--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -181,6 +181,17 @@
         border-radius: 5px;
         border: none;
       }
+      .submit-button {
+        background-color: lightblue;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 90%;
+        font-weight: bold;
+        color: #3d366f;
+        width: 140px;
+        padding: 12px 0;
+        border: none;
+        border-radius: 5px;
+      }
     </style>
   </head>
   <body>
@@ -241,22 +252,38 @@
       <div class="contact-block">
         <h2 class="contact-header textcenter">Contact</h2>
         <p class="contact-text textcenter">Use this form to get in touch. I would love to hear from you!</p>
-        <div class="contact-form">
-          <form class="contact-form" id="contact">
-            <div class="left-form">
-              <p class="contact-text">Name</p>
-              <input type="text" class="field left-form-field" id="name" placeholder="Your name" />
-              <p class="contact-text">Subject</p>
-              <input type="text" class="field left-form-field" id="subject" placeholder="Reason for your message" />
-              <p class="contact-text">Email address</p>
-              <input type="text" class="field left-form-field" id="email" placeholder="Your email address" />
-            </div>
-            <div class="right-form">
-              <p class="contact-text">Message</p>
-              <textarea form="contact" class="field right-form-field" name="message"></textarea>
-            </div>
-          </form>
-        </div>
+        <table>
+          <tr>
+            <td>
+              <div class="contact-form">
+                <form class="contact-form" id="contact">
+                  <div class="left-form">
+                    <p class="contact-text">Name</p>
+                    <input type="text" class="field left-form-field" id="name" placeholder="Your name" />
+                    <p class="contact-text">Subject</p>
+                    <input
+                      type="text"
+                      class="field left-form-field"
+                      id="subject"
+                      placeholder="Reason for your message"
+                    />
+                    <p class="contact-text">Email address</p>
+                    <input type="text" class="field left-form-field" id="email" placeholder="Your email address" />
+                  </div>
+                  <div class="right-form">
+                    <p class="contact-text">Message</p>
+                    <textarea form="contact" class="field right-form-field" name="message"></textarea>
+                  </div>
+                </form>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <button type="submit" form="contact" name="submit-button" class="submit-button">SUBMIT</button>
+            </td>
+          </tr>
+        </table>
       </div>
     </div>
   </body>
