--- a/3 - css/Portfolio-Website/portfolio.html
+++ b/3 - css/Portfolio-Website/portfolio.html
@@ -164,8 +164,8 @@
         margin-right: 50px;
       }
       .left-form-field {
-        height: 35px;
-        width: 330px;
+        height: 30px;
+        width: 350px;
         min-width: 200px;
         padding: 7px 20px;
       }
@@ -191,6 +191,10 @@
         padding: 12px 0;
         border: none;
         border-radius: 5px;
+      }
+      .second-row {
+        text-align: right;
+        padding-top: 35px;
       }
     </style>
   </head>
@@ -252,34 +256,27 @@
       <div class="contact-block">
         <h2 class="contact-header textcenter">Contact</h2>
         <p class="contact-text textcenter">Use this form to get in touch. I would love to hear from you!</p>
-        <table>
+        <table class="block">
           <tr>
-            <td>
-              <div class="contact-form">
-                <form class="contact-form" id="contact">
-                  <div class="left-form">
-                    <p class="contact-text">Name</p>
-                    <input type="text" class="field left-form-field" id="name" placeholder="Your name" />
-                    <p class="contact-text">Subject</p>
-                    <input
-                      type="text"
-                      class="field left-form-field"
-                      id="subject"
-                      placeholder="Reason for your message"
-                    />
-                    <p class="contact-text">Email address</p>
-                    <input type="text" class="field left-form-field" id="email" placeholder="Your email address" />
-                  </div>
-                  <div class="right-form">
-                    <p class="contact-text">Message</p>
-                    <textarea form="contact" class="field right-form-field" name="message"></textarea>
-                  </div>
-                </form>
-              </div>
+            <td class="first-row">
+              <form class="contact-form" id="contact">
+                <div class="left-form">
+                  <p class="contact-text">Name</p>
+                  <input type="text" class="field left-form-field" id="name" placeholder="Your name" />
+                  <p class="contact-text">Subject</p>
+                  <input type="text" class="field left-form-field" id="subject" placeholder="Reason for your message" />
+                  <p class="contact-text">Email address</p>
+                  <input type="text" class="field left-form-field" id="email" placeholder="Your email address" />
+                </div>
+                <div class="right-form">
+                  <p class="contact-text">Message</p>
+                  <textarea form="contact" class="field right-form-field" name="message"></textarea>
+                </div>
+              </form>
             </td>
           </tr>
           <tr>
-            <td>
+            <td class="second-row">
               <button type="submit" form="contact" name="submit-button" class="submit-button">SUBMIT</button>
             </td>
           </tr>
